EF configured, Identity Framework essentials added

--- a/URL_Shortener.API/Pages/_ViewImports.cshtml
+++ b/URL_Shortener.API/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using URL_Shortener.DAL.Entities
 @using URL_Shortener.API
 @using URL_Shortener.API.Data
 @namespace URL_Shortener.API.Pages
