--- a/URL_Shortener.API/Pages/Shared/_LoginPartial.cshtml
+++ b/URL_Shortener.API/Pages/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using URL_Shortener.DAL.Entities
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
