DB Migrations bug fixed

--- a/URL_Shortener.API/Pages/_ViewImports.cshtml
+++ b/URL_Shortener.API/Pages/_ViewImports.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using URL_Shortener.DAL.Entities
+@using URL_Shortener.DAL.Migrations
 @using URL_Shortener.API
-@using URL_Shortener.API.Data
 @namespace URL_Shortener.API.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
