--- a/URL_Shortener/url_shortener.client/src/app/components/url/url.component.html
+++ b/URL_Shortener/url_shortener.client/src/app/components/url/url.component.html
@@ -1,10 +1,8 @@
 <div class="url-table">
   <h2>Shortened URLs</h2>
 
-  <!-- Display "No data" message if the array is empty -->
   <p *ngIf="urls.length === 0"><em>No URLs found. Please add some.</em></p>
 
-  <!-- Table for displaying the URLs -->
   <table *ngIf="urls.length > 0">
     <thead>
       <tr>
@@ -18,8 +16,7 @@
         <td>{{ url.urlText }}</td>
         <td><a>{{ "https://localhost:7214/" + url.shortenUrl }}</a></td>
         <td>
-          <!-- View Details button -->
-          <button class="btn btn-info" (click)="viewUrlDetails(url)">
+          <button  *ngIf="isLoggedIn()" class="btn btn-info" (click)="viewUrlDetails(url.shortenUrl)">
             Details
           </button>
           <button *ngIf="isAdmin() || isUserOwner(url.userEmail)" (click)="deleteUrl(url.urlText)">
@@ -29,37 +26,4 @@
       </tr>
     </tbody>
   </table>
-</div>
-
-<!-- Modal structure -->
-<div class="modal fade"
-     id="infoModal"
-     tabindex="-1"
-     aria-labelledby="modalLabel"
-     aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modalLabel">URL Details</h5>
-        <button type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p><strong>Original URL:</strong> {{ selectedUrl?.urlText }}</p>
-        <p><strong>Shortened URL:</strong> {{ selectedUrl?.shortenUrl }}</p>
-        <p><strong>Creation Date:</strong> {{ selectedUrl?.urlCreationDate }}</p>
-        <p><strong>Description:</strong> {{ selectedUrl?.urlDescription }}</p>
-        <p><strong>Created By:</strong> {{ selectedUrl?.userId }}</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal">
-          Close
-        </button>
-      </div>
-    </div>
-  </div>
 </div>
