--- a/URL_Shortener/url_shortener.client/src/styles.scss
+++ b/URL_Shortener/url_shortener.client/src/styles.scss
@@ -1,45 +1,37 @@
-//@use 'app/assets/styles/custom-variables' as *;
+/* You can add global styles to this file, and also import other style files */
+
+@use 'app/assets/styles/custom-variables' as *;
 @use 'bootstrap/scss/bootstrap' as *;
 
-//@use 'app/assets/styles/vertical-tabs';
-//@use 'app/assets/styles/ngx-datatable';
-//@use 'app/assets/styles/styles-vendor';
+@use 'app/assets/styles/vertical-tabs';
+@use 'app/assets/styles/ngx-datatable';
+@use 'app/assets/styles/styles-vendor';
 
 body, html {
-  height: 100%;
-  background-color: dimgray;
-  color: cornsilk;
+  height: 100%
 }
 
-  html[dir="rtl"] {
-    .app-component
+html[dir="rtl"] {
+  .app-component {
+    .navbar {
+      @media (min-width: 992px) {
+        .ms-lg-auto {
+          margin-left: 0.5rem !important;
+        }
 
-{
-  .navbar
-
-{
-  @media (min-width: 992px) {
-    .ms-lg-auto {
-      margin-left: 0.5rem !important;
-    }
-
-    .me-lg-2 {
-      margin-right: auto !important;
+        .me-lg-2 {
+          margin-right: auto !important;
+        }
+      }
     }
   }
-}
 
-}
-
-.login-container {
-  .btn-social.me-1
-
-{
-  margin-right: 0 !important;
-  margin-left: 0.25rem !important;
-}
-
-}
+  .login-container {
+    .btn-social.me-1 {
+      margin-right: 0 !important;
+      margin-left: 0.25rem !important;
+    }
+  }
 }
 
 .reduced-font {
@@ -62,131 +54,107 @@ textarea.form-control.left-status,
 }
 
 .is-valid {
-  .ng-select.form-control
+  .ng-select.form-control {
+    border-color: $form-feedback-valid-color;
 
-{
-  border-color: $form-feedback-valid-color;
-  &.ng-select-focused
+    &.ng-select-focused {
+      border-color: $form-feedback-valid-color;
+      box-shadow: 0 0 0 $input-focus-width rgba($form-feedback-valid-color, .25);
+    }
 
-{
-  border-color: $form-feedback-valid-color;
-  box-shadow: 0 0 0 $input-focus-width rgba($form-feedback-valid-color, .25);
-}
-
-padding-right: $input-height-inner;
-background-image: escape-svg($form-feedback-icon-valid);
-background-repeat: no-repeat;
-background-position: right $input-height-inner-quarter center;
-background-size: $input-height-inner-half $input-height-inner-half;
-}
+    padding-right: $input-height-inner;
+    background-image: escape-svg($form-feedback-icon-valid);
+    background-repeat: no-repeat;
+    background-position: right $input-height-inner-quarter center;
+    background-size: $input-height-inner-half $input-height-inner-half;
+  }
 }
 
 .is-invalid {
-  .ng-select.form-control
+  .ng-select.form-control {
+    border-color: $form-feedback-invalid-color;
 
-{
-  border-color: $form-feedback-invalid-color;
-  &.ng-select-focused
+    &.ng-select-focused {
+      border-color: $form-feedback-invalid-color;
+      box-shadow: 0 0 0 $input-focus-width rgba($form-feedback-invalid-color, .25);
+    }
 
-{
-  border-color: $form-feedback-invalid-color;
-  box-shadow: 0 0 0 $input-focus-width rgba($form-feedback-invalid-color, .25);
-}
-
-padding-right: $input-height-inner;
-background-image: escape-svg($form-feedback-icon-invalid);
-background-repeat: no-repeat;
-background-position: right $input-height-inner-quarter center;
-background-size: $input-height-inner-half $input-height-inner-half;
-}
+    padding-right: $input-height-inner;
+    background-image: escape-svg($form-feedback-icon-invalid);
+    background-repeat: no-repeat;
+    background-position: right $input-height-inner-quarter center;
+    background-size: $input-height-inner-half $input-height-inner-half;
+  }
 }
 
 .ng-select {
-  &.form-control
+  &.form-control {
+    padding: 0;
+    height: unset !important;
+    min-height: $input-height;
 
-{
-  padding: 0;
-  height: unset !important;
-  min-height: $input-height;
-  .ng-select-container
+    .ng-select-container {
+      border: none !important;
+      box-shadow: none !important;
+    }
 
-{
-  border: none !important;
-  box-shadow: none !important;
-}
-
-&.ng-select-focused {
-  color: $input-focus-color;
-  background-color: $input-focus-bg;
-  border-color: $input-focus-border-color;
-  outline: 0;
-  // Avoid using mixin so we can pass custom focus shadow properly
-
-  @if $enable-shadows
-{
-  box-shadow: $input-box-shadow, $input-focus-box-shadow;
-}
-
-@else {
-  box-shadow: $input-focus-box-shadow;
-}
-
-}
-}
+    &.ng-select-focused {
+      color: $input-focus-color;
+      background-color: $input-focus-bg;
+      border-color: $input-focus-border-color;
+      outline: 0;
+      // Avoid using mixin so we can pass custom focus shadow properly
+      @if $enable-shadows {
+        box-shadow: $input-box-shadow, $input-focus-box-shadow;
+      }
+      @else {
+        box-shadow: $input-focus-box-shadow;
+      }
+    }
+  }
 
 
-&.pill-items {
-  .ng-value-container .ng-value
+  &.pill-items {
+    .ng-value-container .ng-value {
+      background-color: inherit !important;
+    }
 
-{
-  background-color: inherit !important;
-}
+    .ng-value-icon.right {
+      border-left: none !important;
+      padding: 1px 0 1px 3px !important;
+      font-weight: lighter
+    }
 
-.ng-value-icon.right {
-  border-left: none !important;
-  padding: 1px 0 1px 3px !important;
-  font-weight: lighter
-}
+    .ng-value-icon:hover {
+      background-color: inherit !important;
+      font-weight: bold;
+    }
 
-.ng-value-icon:hover {
-  background-color: inherit !important;
-  font-weight: bold;
-}
+    .ng-option {
+      .badge-pill {
+        max-width: 95%;
+      }
+    }
 
-.ng-option {
-  .badge-pill
+    .ng-option-selected {
+      .fa.fa-check {
+        position: absolute;
+        right: 15px;
+        display: inline-block !important;
+      }
+    }
+  }
 
-{
-  max-width: 95%;
-}
+  &.theme-picker {
+    .theme-item {
+      text-align: center;
+    }
 
-}
-
-.ng-option-selected {
-  .fa.fa-check
-
-{
-  position: absolute;
-  right: 15px;
-  display: inline-block !important;
-}
-
-}
-}
-
-&.theme-picker {
-  .theme-item
-
-{
-  text-align: center;
-}
-
-.ng-select-container .ng-value-container,
-.ng-select-container .ng-value-container .ng-value {
-  width: 100%;
-}
-
-}
+    .ng-select-container .ng-value-container,
+    .ng-select-container .ng-value-container .ng-value {
+      width: 100%;
+    }
+  }
 }
 
 .dropdown-toggle.btn-light {
@@ -195,18 +163,14 @@ background-size: $input-height-inner-half $input-height-inner-half;
 }
 
 .modal.login-control {
-  .modal-content
+  .modal-content {
+    border: none;
+    background-color: transparent;
 
-{
-  border: none;
-  background-color: transparent;
-  .modal-body
-
-{
-  padding: 0;
-}
-
-}
+    .modal-body {
+      padding: 0;
+    }
+  }
 }
 
 .nav > li > a:hover,
@@ -257,9 +221,9 @@ i.page-caption {
   font-size: 0.9em;
 }
 
-  #toasta .toast.toasta-theme-bootstrap .toast-text .toast-title {
-    font-size: 1.02em;
-  }
+#toasta .toast.toasta-theme-bootstrap .toast-text .toast-title {
+  font-size: 1.02em;
+}
 
 #toasta .toast-text .toast-msg {
   max-width: 1000px;
@@ -268,21 +232,32 @@ i.page-caption {
   white-space: pre-wrap;
   overflow: auto;
 }
-
+///*-webkit-filter: blur(5px) grayscale(90%);*/
+///*body.modal-open .container {
+//    -webkit-filter: blur(1px);
+//    -moz-filter: blur(1px);
+//    -o-filter: blur(1px);
+//    -ms-filter: blur(1px);
+//    filter: blur(1px);
+//    filter: url("https://gist.githubusercontent.com/amitabhaghosh197/b7865b409e835b5a43b5/raw/1a255b551091924971e7dee8935fd38a7fdf7311/blur".svg#blur);
+//    filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='1');
+//}*/
 .vertical-center-flex {
   min-height: 80vh;
   display: flex;
   align-items: center;
 }
+///*Hack stop get ngx-datatable width to be full when inside bootstrap tab control*/
+//.tab-pane .datatable-scroll {
+//    width: 100% !important;
+//}
 
 .popover.notifications-popup {
   min-width: 280px;
-  .popover-body
 
-{
-  padding: 0 !important;
-}
-
+  .popover-body {
+    padding: 0 !important;
+  }
 }
 
 .ngx-datatable.scroll-vertical {
@@ -303,161 +278,157 @@ i.page-caption {
   display: block;
 }
 
-  .icon-addon:after,
-  .icon-addon:before {
-    display: table;
-    content: " ";
-  }
+.icon-addon:after,
+.icon-addon:before {
+  display: table;
+  content: " ";
+}
 
-  .icon-addon:after {
-    clear: both;
-  }
+.icon-addon:after {
+  clear: both;
+}
 
-  .icon-addon.addon-md .fa,
-  .icon-addon .fa {
-    position: absolute;
-    z-index: 2;
-    font-size: 1rem;
-    width: 20px;
-    text-align: center;
-    padding: 10px 0;
-    top: 1px;
-  }
+.icon-addon.addon-md .fa,
+.icon-addon .fa {
+  position: absolute;
+  z-index: 2;
+  font-size: 1rem;
+  width: 20px;
+  text-align: center;
+  padding: 10px 0;
+  top: 1px;
+}
 
-    .icon-addon .fa.left-icon {
-      left: 10px;
-      margin-left: -2.5px;
-    }
+.icon-addon .fa.left-icon {
+  left: 10px;
+  margin-left: -2.5px;
+}
 
-    .icon-addon .fa.right-icon {
-      right: 10px;
-      margin-right: -2.5px;
-    }
+.icon-addon .fa.right-icon {
+  right: 10px;
+  margin-right: -2.5px;
+}
 
-  .icon-addon.addon-lg .form-control {
-    line-height: 1.33;
-    height: 46px;
-    font-size: 18px;
-  }
+.icon-addon.addon-lg .form-control {
+  line-height: 1.33;
+  height: 46px;
+  font-size: 18px;
+}
 
-    .icon-addon.addon-lg .form-control.left-icon {
-      padding-top: 10px;
-      padding-right: 16px;
-      padding-bottom: 10px;
-      padding-left: 40px !important;
-    }
+.icon-addon.addon-lg .form-control.left-icon {
+  padding-top: 10px;
+  padding-right: 16px;
+  padding-bottom: 10px;
+  padding-left: 40px !important;
+}
 
-    .icon-addon.addon-lg .form-control.right-icon {
-      padding-top: 10px;
-      padding-right: 40px !important;
-      padding-bottom: 10px;
-      padding-left: 16px;
-    }
+.icon-addon.addon-lg .form-control.right-icon {
+  padding-top: 10px;
+  padding-right: 40px !important;
+  padding-bottom: 10px;
+  padding-left: 16px;
+}
 
-  .icon-addon.addon-sm .form-control {
-    height: 30px;
-    font-size: 0.875rem;
-    line-height: 1.5;
-  }
+.icon-addon.addon-sm .form-control {
+  height: 30px;
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
 
-    .icon-addon.addon-sm .form-control.left-icon {
-      padding-top: 5px;
-      padding-right: 10px;
-      padding-bottom: 5px;
-      padding-left: 28px !important;
-    }
+.icon-addon.addon-sm .form-control.left-icon {
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 28px !important;
+}
 
-    .icon-addon.addon-sm .form-control.right-icon {
-      padding-top: 5px;
-      padding-right: 28px !important;
-      padding-bottom: 5px;
-      padding-left: 10px;
-    }
+.icon-addon.addon-sm .form-control.right-icon {
+  padding-top: 5px;
+  padding-right: 28px !important;
+  padding-bottom: 5px;
+  padding-left: 10px;
+}
 
-  .icon-addon.addon-lg .fa {
-    font-size: 18px;
-    top: 4px;
-  }
+.icon-addon.addon-lg .fa {
+  font-size: 18px;
+  top: 4px;
+}
 
-    .icon-addon.addon-lg .fa.left-icon {
-      margin-left: 0;
-      left: 11px;
-    }
+.icon-addon.addon-lg .fa.left-icon {
+  margin-left: 0;
+  left: 11px;
+}
 
-    .icon-addon.addon-lg .fa.right-icon {
-      margin-right: 0;
-      right: 11px;
-    }
+.icon-addon.addon-lg .fa.right-icon {
+  margin-right: 0;
+  right: 11px;
+}
 
-  .icon-addon.addon-md .form-control,
-  .icon-addon .form-control {
-    font-weight: normal;
-  }
+.icon-addon.addon-md .form-control,
+.icon-addon .form-control {
+  font-weight: normal;
+}
 
-    .icon-addon.addon-md .form-control.left-icon,
-    .icon-addon .form-control.left-icon {
-      float: left;
-      padding-left: 30px;
-    }
+.icon-addon.addon-md .form-control.left-icon,
+.icon-addon .form-control.left-icon {
+  float: left;
+  padding-left: 30px;
+}
 
-    .icon-addon.addon-md .form-control.right-icon,
-    .icon-addon .form-control.right-icon {
-      float: right;
-      padding-right: 30px;
-    }
+.icon-addon.addon-md .form-control.right-icon,
+.icon-addon .form-control.right-icon {
+  float: right;
+  padding-right: 30px;
+}
 
-  .icon-addon.addon-sm .fa {
-    font-size: 12px;
-    top: -1px;
-  }
+.icon-addon.addon-sm .fa {
+  font-size: 12px;
+  top: -1px;
+}
 
-    .icon-addon.addon-sm .fa.left-icon,
-    .icon-addon.addon-sm .glyphicon.left-icon {
-      margin-left: 0;
-      left: 5px;
-    }
+.icon-addon.addon-sm .fa.left-icon,
+.icon-addon.addon-sm .glyphicon.left-icon {
+  margin-left: 0;
+  left: 5px;
+}
 
-    .icon-addon.addon-sm .fa.right-icon,
-    .icon-addon.addon-sm .glyphicon.right-icon {
-      margin-right: 0;
-      right: 5px;
-    }
+.icon-addon.addon-sm .fa.right-icon,
+.icon-addon.addon-sm .glyphicon.right-icon {
+  margin-right: 0;
+  right: 5px;
+}
 
-  .icon-addon .form-control:focus + .glyphicon,
-  .icon-addon:hover .glyphicon,
-  .icon-addon .form-control:focus + .fa,
-  .icon-addon:hover .fa {
-    color: #2580db;
-  }
+.icon-addon .form-control:focus + .glyphicon,
+.icon-addon:hover .glyphicon,
+.icon-addon .form-control:focus + .fa,
+.icon-addon:hover .fa {
+  color: #2580db;
+}
 
 .clear-input {
   text-decoration: none !important;
   color: #b3b3b3 !important;
 }
 
-  .clear-input:hover {
-    color: #2580db !important;
-  }
+.clear-input:hover {
+  color: #2580db !important;
+}
 
 a.text-link,
 .btn-link.text-link {
   text-decoration: none;
-  &:hover
 
-{
-  text-decoration: underline;
-}
-
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .text-link a {
   text-decoration: none;
-  &:hover:not(.btn):not(.card-link)
 
-{
-  text-decoration: underline;
-}
-
+  &:hover:not(.btn):not(.card-link) {
+    text-decoration: underline;
+  }
 }
 
 .fs-sm {
@@ -467,4 +438,3 @@ a.text-link,
 .hr-separator {
   opacity: 0.125
 }
-
