--- a/URL_Shortener/url_shortener.client/src/app/components/url/url.component.scss
+++ b/URL_Shortener/url_shortener.client/src/app/components/url/url.component.scss
@@ -1,15 +1,107 @@
-:host {
-  max-width: 1280px;
-  padding: 2rem;
-  text-align: center;
+.url-table .table {
+  --bs-table-bg: #4d555e;
+  --bs-table-color: #f8f9fa;
+  --bs-table-accent-bg: #525960;
+  --bs-table-even-bg: #4d555e;
+  --bs-table-border-color: #3c4147;
+
+  thead {
+    background-color: #343a40;
+    color: #ffffff;
+
+    th {
+      font-weight: bold;
+      text-align: center;
+      font-size: 12pt;
+      padding: 0.8rem;
+      border: 1px solid var(--bs-table-border-color);
+    }
+  }
+
+  tbody {
+    tr {
+      background-color: var(--bs-table-bg);
+      color: var(--bs-table-color) !important;
+      font-size: 11pt;
+      align-items: center;
+
+      &:hover {
+        background-color: var(--bs-table-accent-bg);
+      }
+
+      td {
+        padding: 0.8rem;
+        border: 1px solid var(--bs-table-border-color);
+        color: var(--bs-table-color) !important;
+        align-items: center;
+        vertical-align: middle;
+        max-width: 400px;
+        word-wrap: break-word;
+
+        a {
+          color: var(--bs-table-color) !important;
+          text-decoration: none;
+        }
+      }
+    }
+
+    tr:nth-child(even) {
+      background-color: var(--bs-table-bg);
+      color: var(--bs-table-color) !important;
+    }
+  }
+
+  tbody tr {
+    background-color: var(--bs-table-bg) !important;
+    color: var(--bs-table-color) !important;
+    box-shadow: none;
+  }
+
+  .actions {
+    display: flex; /* Enable Flexbox for the cell */
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
+    //gap: 1rem; /* Add spacing between the buttons */
+    //padding: 1rem; /* Add padding to ensure spacing from the cell edges */
+  }
 }
 
-th, td {
-  padding-left: 1rem;
-  padding-right: 1rem;
+button.btn {
+  font-size: 1.4rem; 
+  background-color: transparent !important; 
+  border: 1px solid transparent; 
+  color: inherit;
+  padding: 0.5rem 1rem; 
+  transition: color 0.3s ease, border-color 0.3s ease; 
+
+  &:hover {
+    color: #007bff; 
+    //border-color: #007bff; 
+  }
+
+  i {
+    margin-right: 0.5rem; 
+  }
 }
 
-table {
-  margin: 0 auto;
+button.btn-info {
+  color: #17a2b8; 
 }
 
+button.btn-danger {
+  color: #dc3545; 
+}
+
+button.btn-success {
+  color: #f8f9fa;
+  font-size: 13pt;
+}
+
+h2 {
+  color: #f8f9fa !important;
+  margin: 0 !important;
+}
+
+.container {
+  margin-top: 0 !important;
+}
