--- a/URL_Shortener/url_shortener.client/src/app/components/header/header.component.css
+++ b/URL_Shortener/url_shortener.client/src/app/components/header/header.component.css
@@ -56,9 +56,15 @@ nav ul {
     }
 
       nav ul li a.clicked {
-        background-color: #028a9d; /* Change background color on click */
-        color: #fff; /* Change text color */
-        font-weight: bold; /* Example additional style */
+        background-color: #191b1e;
+        color: #fff;
+        font-weight: bold;
+      }
+
+      nav ul li a.clicked:hover {
+        background-color: #222528;
+        color: #fff;
+        font-weight: bold;
       }
 
       nav ul li a:hover {
