--- a/URL_Shortener/url_shortener.client/src/app/app.component.scss
+++ b/URL_Shortener/url_shortener.client/src/app/app.component.scss
@@ -28,3 +28,34 @@
 .app-footer p {
   margin: 0;
 }
+
+.global-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.3);
+  font-size: 20pt;
+  color: white;
+  //z-index: 9999;
+}
+
+.global-loader p {
+}
+
+mat-progress-bar {
+  width: 80%;
+  max-width: 500px;
+  //height: 15px;
+  background-color: #f1f1f1;
+  color: #007bff;
+}
+
+.mat-progress-bar .mat-progress-bar-fill {
+  background-color: #007bff; 
+}
