Toast Notifications added, slight improvements of URL Table UI

--- a/URL_Shortener/url_shortener.client/src/app/app.component.html
+++ b/URL_Shortener/url_shortener.client/src/app/app.component.html
@@ -8,6 +8,7 @@
       <mat-progress-bar mode="indeterminate" title="Loading">Loading...</mat-progress-bar>
     </div>
     <router-outlet></router-outlet>
+    <p-toast></p-toast>
   </main>
 
   <footer class="app-footer">
