--- a/URL_Shortener/url_shortener.client/src/app/components/url/url-info.component.html
+++ b/URL_Shortener/url_shortener.client/src/app/components/url/url-info.component.html
@@ -1,4 +1,4 @@
-<div class="url-details">
+<div *ngIf="!isLoading()" class="url-details">
   <button class="btn-back" (click)="goBack()">
     <i class="fa fa-arrow-left"></i> Back
   </button>
